Fix desktop font: Prioritize Apple Garamond Light on Mac, EB Garamond on iOS

--- a/src/style.css
+++ b/src/style.css
@@ -1311,7 +1311,7 @@ body.mobile-view .shop-container.home-page-container > .product-showcase-item {
 }
 
 .product-showcase-name {
-  font-family: "EB Garamond", "Apple Garamond", "Garamond", "Times New Roman", serif;
+  font-family: "Apple Garamond Light", "Apple Garamond", "EB Garamond", "Garamond", "Times New Roman", serif;
   font-size: 22px;
   font-weight: 300;
   font-style: normal;
@@ -1680,7 +1680,7 @@ body.mobile-view .shop-container.home-page-container > .product-showcase-item {
 }
 
 .product-name {
-  font-family: "EB Garamond", "Apple Garamond", "Garamond", "Times New Roman", serif;
+  font-family: "Apple Garamond Light", "Apple Garamond", "EB Garamond", "Garamond", "Times New Roman", serif;
   font-size: 14px;
   font-weight: 300;
   font-style: normal;
